[gd_scene load_steps=11 format=3 uid="uid://dx2ny8uhi6m5v"]

[ext_resource type="Script" path="res://scenes/entities/worm.gd" id="1_7fqqf"]
[ext_resource type="Texture2D" uid="uid://fnu2hxu21uiu" path="res://graphics/Enemies/worm/0.png" id="1_jyf5i"]
[ext_resource type="Shader" path="res://scenes/entities/flicker.gdshader" id="2_m374v"]
[ext_resource type="Texture2D" uid="uid://haqfavpmwcdb" path="res://graphics/Enemies/worm/1.png" id="3_gridj"]
[ext_resource type="AudioStream" uid="uid://cchg7ssppn6ng" path="res://audio/shot_01.ogg" id="5_1vunh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dhlhj"]
resource_local_to_scene = true
shader = ExtResource("2_m374v")
shader_parameter/color = Color(0.992157, 0.992157, 0.988235, 1)
shader_parameter/amount = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ix8ws"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_jyf5i")
}, {
"duration": 1.0,
"texture": ExtResource("3_gridj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t4e43"]
radius = 3.0
height = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3o70v"]
size = Vector2(12, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_duqlh"]
size = Vector2(1.75, 1.625)

[node name="Worm" type="Area2D"]
scale = Vector2(4, 4)
collision_layer = 4
collision_mask = 19
script = ExtResource("1_7fqqf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_dhlhj")
sprite_frames = SubResource("SpriteFrames_ix8ws")
autoplay = "default"
frame_progress = 0.74009

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_t4e43")

[node name="BorderArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderArea"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_3o70v")

[node name="BottomRightArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRightArea"]
position = Vector2(6, 4)
shape = SubResource("RectangleShape2D_duqlh")

[node name="BottomLeftArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeftArea"]
position = Vector2(-6, 4)
shape = SubResource("RectangleShape2D_duqlh")

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_1vunh")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="body_entered" from="BorderArea" to="." method="_on_border_area_body_entered"]
[connection signal="body_exited" from="BottomRightArea" to="." method="_on_bottom_right_area_body_exited"]
[connection signal="body_exited" from="BottomLeftArea" to="." method="_on_bottom_left_area_body_exited"]
